<resources>
    <string name="app_name">Temperature Calculator</string>
    <string name="cal">Calculate</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="textview">0.0</string>
    <string name="thermometer">thermometer</string>
    <string name="enter_temperature_in_f_or_c">Enter Temperature in F or C......</string>
</resources>
