<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:contentDescription="@string/thermometer"
        app:srcCompat="@drawable/themo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="15dp"
        android:hint="@string/enter_temperature_in_f_or_c"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/ftoc"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fahrenheit_to_celsius"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FF0000"/>
        <RadioButton
            android:id="@+id/ctof"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/celsius_to_fahrenheit"
            android:textColor="#FFFFFF"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/cal"
        android:textColor="#FFFFFF" />

</LinearLayout>